Version 1.7 -Eta Carinae-

* [NEW] Added a general Calendar feature for tiki content browsing and groups calendar
  management. Uses overlib and some javascript enhancements.
* [NEW] Added a MODULE plugin to display modules inside wiki pages
* [NEW] Added copyrights management system.
* [NEW] Authentication: Tiki can use the WebServer authentication if admin wants, the
  user is automatically logged to Tiki once the WebServer authentication is used.
* [NEW] Mechanism to prevent script/robotic user registration is supported, Tiki generates
  a graphical number that the user must enter in the registration form to be registered.
  This feature is optional and can be enabled/disabled from the admin->login menu.
* [NEW] New theme added: neat based on plone.
* [NEW] A single wiki-page can be a multi-page page using ...page... to sepparate pages,
  individual pages can be viewed using navigation links or a slideshow.
* [NEW] A wiki structure can be created/imported from a text representation of the tree
  where structure levels are depicted by indenting the text with single spaces.
* [NEW] All pages in a structure can be exported from the admin structures page
* [NEW] A text representation of a Wiki structure can be exported then it can be used
  to create (recreate) the structure in another system. 
* [NEW] Blogs: Blog posts now support multi-page posts, the first page will be displayed
  when listing blog posts (can be used as a heading) and the other pages are navigable
  when reading a blog post.
* [NEW] Articles: Multi-page articles are now supported, use "...page..." to sepparate
  pages in a multi-page article. Navigation links to article pages automatically added.
* [NEW] Articles: The permission tiki_p_autoapprove_submission was added, groups with
  that permission can submit articles that are automatically approved.
* [NEW] Articles: The list of articles can be configured choosing which columns should
  be displayed when listing articles.